chore/affiliate-images-added

--- a/404.html
+++ b/404.html
@@ -4,5 +4,7 @@ title: Not found
 permalink: /404.html
 ---
 
-<h1 class="main-title" style="margin-top: 10rem; text-align: center;">Page not found</h1>
-<p style="text-align: center;">Try the navigation above.</p>
+<h1 class="main-title" style="margin-top: 10rem; text-align: center">
+  Page not found
+</h1>
+<p style="text-align: center">Try the navigation above.</p>
