--- a/affliates/index.html
+++ b/affliates/index.html
@@ -5,75 +5,146 @@ description: Carefully curated AI scribe tools to help provisional psychologists
 ---
 
 <div class="container container-short">
-<header class="title-container">
-  <div class="title-content-centered">
-    <h1 class="main-title main-title">
-      <u>Free</u> AI Scribe Tools
-    </h1>
-    <p class="main-subtitle">for Provisional Psychologists</p>
-  </div>
-</header>
-
-<section class="card mb-2">
-  <h2 class="content-info-header-alt mb-1">🤝 Huge News!</h2>
-  <p class="section-text-alt">
-    I'm excited to announce that I'm now offering <u>free</u> AI scribe tools to provisional psychologists<br>
-    See the company information on their websites for terms and conditions<br>
-    Share with any provisional psychologists who should know about this!  
-  </p>
-</section>
-
-<section class="cards-grid">
-  <article class="card card-alt">
-    <div class="mb-8">
-      <h3 class="card-title">Heidi Health</h3>
-      <div class="row-between row-divider">
-        <p class="subtitle-muted">Free for trainees and students</p>
-      </div>
-      <ul class="card-list">
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Highest level of security (SOC2 and ISO27001)</li>
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>AI is trained on medical language and built by clinicians, making transcription unmatched</li>
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Fully regulated in multiple countries</li>
-        <li class="flex gap-05"><span class="text-gold">✓</span>Custom templates</li>
-      </ul>
+  <header class="title-container">
+    <div class="title-content-centered">
+      <h1 class="main-title main-title"><u>Free</u> AI Scribe Tools</h1>
+      <p class="main-subtitle">for Provisional Psychologists</p>
     </div>
-    <a href="https://www.heidihealth.com/au/solutions/medical-trainees?utm_source=psychology-squared&utm_medium=post&utm_campaign=psychology-squared" class="btn js-affiliate" data-affiliate="heidihealth">Try it Free</a>
-  </article>
+  </header>
 
-  <article class="card card-alt">
-    <div class="mb-8">
-      <h3 class="card-title">NovoPsych</h3>
-      <div class="row-between row-divider">
-        <p class="subtitle-muted">18 months at no cost for provisional psychologists</p>
-        <!-- <p class="price">$30/month</p> -->
-      </div>
-      <ul class="card-list">
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Specifically designed for mental health practitioners by the team at NovoPsych</li>
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Multi session reports</li>
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Integration of psychometric results of NovoPsych</li>
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Template library designed by a team of psychologists</li>
-      </ul>
+  <section class="card mb-8">
+    <h2 class="content-info-header-alt mb-1">🤝 Huge News!</h2>
+    <p class="section-text-alt">
+      I'm excited to announce that I'm now offering <u>free</u> AI scribe tools
+      to provisional psychologists<br />
+      See the company information on their websites for terms and conditions<br />
+      Share with any provisional psychologists who should know about this!
+    </p>
+  </section>
+
+  <section class="container-alt">
+    <div class="flex gap-2 items-center">
+      <article class="card card-alt card-bordered max-w-50">
+        <div class="mb-8">
+          <h3 class="card-title">Heidi Health</h3>
+          <div class="row-between row-divider">
+            <p class="subtitle-muted">Free for trainees and students</p>
+          </div>
+          <ul class="card-list">
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Highest level of security (SOC2
+              and ISO27001)
+            </li>
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>AI is trained on medical language
+              and built by clinicians, making transcription unmatched
+            </li>
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Fully regulated in multiple
+              countries
+            </li>
+            <li class="flex gap-05">
+              <span class="text-gold">✓</span>Custom templates
+            </li>
+          </ul>
+        </div>
+        <a
+          href="https://www.heidihealth.com/au/solutions/medical-trainees?utm_source=psychology-squared&utm_medium=post&utm_campaign=psychology-squared"
+          data-affiliate="heidihealth"
+          class="btn js-affiliate"
+          >Try it Free</a
+        >
+      </article>
+      <img
+        src="../assets/images/heidi-affiliate.png"
+        alt="Heidi Health Logo"
+        class="max-w-50"
+      />
     </div>
-    <a href="https://novopsych.com/provisional-psychologist-hub/" class="btn js-affiliate" data-affiliate="novopsych">Try it Free</a>
-  </article>
 
-  <article class="card card-alt">
-    <div class="mb-8">
-      <h3 class="card-title">Practaluma</h3>
-      <div class="row-between row-divider">
-        <p class="subtitle-muted">Create an account and email <u>support@practaluma.com</u> your provisional status for free access</p>
-      </div>
-      <ul class="card-list">
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Converts sessions into clinical notes and reports</li>
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Streamlines delivery and scoring of psychometric tools</li>
-        <li class="flex gap-05 mb-075"><span class="text-gold">✓</span>Australian Privacy and HIPAA-compliant platform</li>
-      </ul>
+    <div class="flex gap-2 items-center">
+      <article class="card card-alt card-bordered max-w-50">
+        <div class="mb-8">
+          <h3 class="card-title">NovoPsych</h3>
+          <div class="row-between row-divider">
+            <p class="subtitle-muted">
+              18 months at no cost for provisional psychologists
+            </p>
+            <!-- <p class="price">$30/month</p> -->
+          </div>
+          <ul class="card-list">
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Specifically designed for mental
+              health practitioners by the team at NovoPsych
+            </li>
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Multi session reports
+            </li>
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Integration of psychometric
+              results of NovoPsych
+            </li>
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Template library designed by a
+              team of psychologists
+            </li>
+          </ul>
+        </div>
+        <a
+          href="https://novopsych.com/provisional-psychologist-hub/"
+          class="btn js-affiliate"
+          data-affiliate="novopsych"
+          >Try it Free</a
+        >
+      </article>
+      <img
+        src="../assets/images/novoNote-affiliate.png"
+        alt="NovoPsych Logo"
+        class="max-w-50"
+      />
     </div>
-    <a href="https://www.practaluma.com/" class="btn js-affiliate" data-affiliate="practaluma">Try it Free</a>
-  </article>
-</section>
 
-<!-- <section class="mt-8">
+    <div class="flex gap-2 items-center">
+      <article class="card card-alt card-bordered max-w-50">
+        <div class="mb-8">
+          <h3 class="card-title">Practaluma</h3>
+          <div class="row-between row-divider">
+            <p class="subtitle-muted">
+              Create an account and email <u>support@practaluma.com</u> your
+              provisional status for free access
+            </p>
+          </div>
+          <ul class="card-list">
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Converts sessions into clinical
+              notes and reports
+            </li>
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Streamlines delivery and scoring
+              of psychometric tools
+            </li>
+            <li class="flex gap-05 mb-075">
+              <span class="text-gold">✓</span>Australian Privacy and
+              HIPAA-compliant platform
+            </li>
+          </ul>
+        </div>
+        <a
+          href="https://www.practaluma.com/"
+          class="btn js-affiliate"
+          data-affiliate="practaluma"
+          >Try it Free</a
+        >
+      </article>
+      <img
+        src="../assets/images/practaLuma-affiliate.webp"
+        alt="Practaluma Logo"
+        class="max-w-40 ml-2"
+      />
+    </div>
+  </section>
+
+  <!-- <section class="mt-8">
   <h2 class="section-title">What Others Are Saying</h2>
   <div class="cards-grid">
     <div class="card">
@@ -90,3 +161,4 @@ description: Carefully curated AI scribe tools to help provisional psychologists
     </div>
   </div>
 </section> -->
+</div>
