--- a/contact/index.html
+++ b/contact/index.html
@@ -15,8 +15,6 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
   </div>
 </header>
 
-
-
 <!-- Consultancy Booking -->
 <!-- <section id="consultancy" class="section gap-2 bg2">
   <h2 class="section-title">
@@ -103,27 +101,52 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
             >Individual and group consultations available</span
           >
         </div>
-        <h4 class="card-title" style="margin-top: 2.5rem; margin-bottom: 1.5rem; text-align: left">
+        <h4
+          class="card-title"
+          style="margin-top: 2.5rem; margin-bottom: 1.5rem; text-align: left"
+        >
           Follow Our Work
         </h4>
-        <div style="display: flex; gap: 1rem; flex-wrap: wrap; flex-direction: column; max-width: fit-content;">
-        <a href="https://www.facebook.com/groups/austpsychai" target="_blank" class="btn" style="padding-left: 2rem; padding-right: 2rem;">
-          <span>&#128101;</span> Join 3,500+ Clinicians
-        </a>
-        <a href="https://www.linkedin.com/in/davidlopis/" target="_blank" class="btn" style="padding-left: 2rem; padding-right: 2rem;">
-          <span>in</span> LinkedIn
-        </a>
+        <div
+          style="
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
+            flex-direction: column;
+            max-width: fit-content;
+          "
+        >
+          <a
+            href="https://www.facebook.com/groups/austpsychai"
+            target="_blank"
+            class="btn"
+            style="padding-left: 2rem; padding-right: 2rem"
+          >
+            <span>&#128101;</span> Join 3,500+ Clinicians
+          </a>
+          <a
+            href="https://www.linkedin.com/in/davidlopis/"
+            target="_blank"
+            class="btn"
+            style="padding-left: 2rem; padding-right: 2rem"
+          >
+            <span>in</span> LinkedIn
+          </a>
         </div>
       </div>
 
-      <div style="display: flex; gap: 1rem; flex-wrap: wrap; flex-direction: column;">
-
-
-     
+      <div
+        style="
+          display: flex;
+          gap: 1rem;
+          flex-wrap: wrap;
+          flex-direction: column;
+        "
+      >
         <!-- <button class="btn" onclick="window.open('https://twitter.com/davidlopis', '_blank')">
                         <span style="margin-right: 0.5rem;">&#120143;</span> Twitter
                     </button> -->
-                  </div>
+      </div>
     </div>
 
     <div class="card">
