--- a/faq/index.html
+++ b/faq/index.html
@@ -20,9 +20,7 @@ subnav:
 <!-- Header -->
 <header class="title-container">
   <div class="title-content title-content-centered">
-    <h1 class="main-title">
-      Frequently Asked Questions
-    </h1>
+    <h1 class="main-title">Frequently Asked Questions</h1>
     <p class="main-subtitle">
       Straightforward answers about our services, ethics, compliance, and
       learning resources.
