chore/affiliate-header-image

--- a/affliates/index.html
+++ b/affliates/index.html
@@ -6,8 +6,9 @@ description: Carefully curated AI scribe tools to help provisional psychologists
 
 <div class="container container-short">
   <header class="title-container">
-    <div class="title-content-centered">
-      <h1 class="main-title main-title"><u>Free</u> AI Scribe Tools</h1>
+    <img src="../assets/images/affiliate-header.png" alt="Affiliate Header" class="max-w-50">
+    <div class="title-content title-content-centered">
+      <h1 class="main-title main-title"><u>Free</u> AI Scribes</h1>
       <p class="main-subtitle">for Provisional Psychologists</p>
     </div>
   </header>
