chore/layout-uplift

--- a/affliates/index.html
+++ b/affliates/index.html
@@ -5,12 +5,12 @@ description: Carefully curated AI scribe tools to help provisional psychologists
 ---
 
 <div class="container container-short">
-  <header class="title-container">
-    <img src="../assets/images/affiliate-header.png" alt="Affiliate Header" class="max-w-50">
+  <header class="title-container mb-05 mt-12">
     <div class="title-content title-content-centered">
       <h1 class="main-title main-title"><u>Free</u> AI Scribes</h1>
       <p class="main-subtitle">for Provisional Psychologists</p>
     </div>
+    <img src="../assets/images/affiliate-header.png" alt="Affiliate Header" class="max-w-50">
   </header>
 
   <section class="card mb-8">
@@ -25,6 +25,11 @@ description: Carefully curated AI scribe tools to help provisional psychologists
 
   <section class="container-alt">
     <div class="flex gap-2 items-center">
+      <img
+      src="../assets/images/heidi-affiliate.png"
+      alt="Heidi Health Logo"
+      class="max-w-50"
+    />
       <article class="card card-alt card-bordered max-w-50">
         <div class="mb-8">
           <h3 class="card-title">Heidi Health</h3>
@@ -56,14 +61,14 @@ description: Carefully curated AI scribe tools to help provisional psychologists
           >Try it Free</a
         >
       </article>
-      <img
-        src="../assets/images/heidi-affiliate.png"
-        alt="Heidi Health Logo"
-        class="max-w-50"
-      />
     </div>
 
     <div class="flex gap-2 items-center">
+      <img
+      src="../assets/images/novoNote-affiliate.png"
+      alt="NovoPsych Logo"
+      class="max-w-50"
+    />
       <article class="card card-alt card-bordered max-w-50">
         <div class="mb-8">
           <h3 class="card-title">NovoPsych</h3>
@@ -98,14 +103,14 @@ description: Carefully curated AI scribe tools to help provisional psychologists
           >Try it Free</a
         >
       </article>
-      <img
-        src="../assets/images/novoNote-affiliate.png"
-        alt="NovoPsych Logo"
-        class="max-w-50"
-      />
     </div>
 
     <div class="flex gap-2 items-center">
+      <img
+      src="../assets/images/practaLuma-affiliate.webp"
+      alt="Practaluma Logo"
+      class="max-w-50"
+    />
       <article class="card card-alt card-bordered max-w-50">
         <div class="mb-8">
           <h3 class="card-title">Practaluma</h3>
@@ -137,11 +142,6 @@ description: Carefully curated AI scribe tools to help provisional psychologists
           >Try it Free</a
         >
       </article>
-      <img
-        src="../assets/images/practaLuma-affiliate.webp"
-        alt="Practaluma Logo"
-        class="max-w-40 ml-2"
-      />
     </div>
   </section>
 
