fix/header-image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ subnav:
 ---
 
 <header id="home" class="title-container container-short">
-  <div class="container container-alt container-main">
+  <div class="container-main">
     <div class="title-content">
       <h1 class="main-title main-title-accent">
         AI FOR<br />
