chore/comparison-table-in-nav-bar

--- a/index.html
+++ b/index.html
@@ -13,24 +13,22 @@ subnav:
     href: "#pricing"
 ---
 
-<header id="home" class="title-container container-short">
-  <div class="container-main">
-    <div class="title-content">
-      <h1 class="main-title main-title-accent">
-        AI FOR<br />
-        <span class="main-title">CLINICIANS</span>
-      </h1>
-      <p class="main-subtitle">Building effective and responsible AI use</p>
-      <button onclick="openBookingForm()" class="hero-cta">
-        <span>BOOK NOW</span>
-        <small class="hero-cta-subtitle">Transform Your Practice</small>
-      </button>
-    </div>
+<header id="home" class="title-container">
+  <div class="title-content">
+    <h1 class="main-title main-title-accent">
+      AI FOR<br />
+      <span class="main-title">CLINICIANS</span>
+    </h1>
+    <p class="main-subtitle">Building effective and responsible AI use</p>
+    <button onclick="openBookingForm()" class="hero-cta">
+      <span>BOOK NOW</span>
+      <small class="hero-cta-subtitle">Transform Your Practice</small>
+    </button>
   </div>
   <img
-    src="../assets/images/landing-page/professionalHeadshot-no-background.png"
-    alt="David Lopis - AI Consultant"
-  />
+      src="../assets/images/landing-page/professionalHeadshot-no-background.png"
+      alt="David Lopis - AI Consultant"
+    />
 </header>
 <!-- About Section -->
 <section id="about" class="section bg1">
