chore/prov-psych-nav-bar

--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -18,8 +18,8 @@ description: Carefully curated AI scribe tools to help provisional psychologists
     <p class="section-text-alt">
       I'm excited to announce that I'm now offering <u>free</u> AI scribe tools
       to provisional psychologists<br />
-      See the company information on their websites for terms and conditions<br />
-      Share with any provisional psychologists who should know about this!
+      Share with any provisional psychologists who should know about this!<br />
+      See the company information on their websites for terms and conditions
     </p>
   </section>
 
