--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -4,38 +4,59 @@ title: Free AI Scribe Tools for Provisional Psychologists
 description: Carefully curated AI scribe tools to help provisional psychologists reduce documentation time and focus on client care.
 ---
 
-<div class="container container-short">
-  <header class="title-container mb-05 mt-12">
-    <div class="title-content title-content-centered">
-      <h1 class="main-title main-title"><u>Free</u> AI Scribes</h1>
-      <p class="main-subtitle">for Provisional Psychologists</p>
-    </div>
-    <img src="../assets/images/affiliate/affiliate-header.png" alt="Affiliate Header" class="max-w-50">
-  </header>
+<script>
+  const companies = [
+    {
+      name: "Heidi Health",
+      description: [
+        "Transcription",
+        "Document and note generation",
+        "Custom templates",
+        "Australian Privacy Principle compliant",
+      ],
+      link: "https://www.heidihealth.com/au/solutions/medical-trainees?utm_source=psychology-squared&utm_medium=post&utm_campaign=psychology-squared",
+      image: "../assets/images/affiliate/heidi-affiliate.png",
+    },
+    {
+      name: "NovoPsych",
+      description: [
+        "Transcription",
+        "Document and note generation",
+        "Custom templates",
+        "Australian Privacy Principle compliant",
+        "18 months at no cost for provisional psychologists",
+      ],
+      link: "https://novopsych.com/provisional-psychologist-hub/",
+      image: "../assets/images/affiliate/novoNote-affiliate.png",
+    },
+    {
+      name: "Practaluma",
+      description: [
+        "Transcription",
+        "Document and note generation",
+        "Custom templates",
+        "Australian Privacy Principle compliant",
+        "Create an account and email support@practaluma.com your provisional status for free access",
+      ],
+      link: "https://www.practaluma.com/",
+      image: "../assets/images/affiliate/practaLuma-affiliate.webp",
+    },
+  ];
 
-  <section class="card mb-8">
-    <h2 class="content-info-header-alt mb-1">🤝 Huge News!</h2>
-    <p class="section-text-alt">
-      I'm excited to announce that I'm now offering <u>free</u> AI scribe tools
-      to provisional psychologists<br />
-      Share with any provisional psychologists who should know about this!<br />
-      See the company information on their websites for terms and conditions
-    </p>
-  </section>
-
-  <section class="container-alt">
-    <div class="flex gap-2 items-center">
+  const renderCompanies = () => {
+    const container = document.getElementById("prov-psych-container");
+    companies.forEach((company) => {
+      const div = document.createElement("div");
+      div.classList.add("flex", "gap-2", "items-center");
+      div.innerHTML = `
       <img
-      src="../assets/images/affiliate/heidi-affiliate.png"
-      alt="Heidi Health Logo"
-      class="max-w-50"
-    />
-      <article class="card card-alt card-bordered max-w-50">
+        src="${company.image}"
+        alt="${company.name} Logo"
+        class="max-w-50"
+      />
+      <article class="card card-alt card-bordered prov-psych-card">
         <div class="mb-8">
-          <h3 class="card-title">Heidi Health</h3>
-          <div class="row-between row-divider">
-            <p class="subtitle-muted">Free for trainees and students</p>
-          </div>
+          <h3 class="card-title">${company.name}</h3>
           <ul class="card-list">
             <li class="flex gap-05 mb-075">
               <span class="text-gold">✓</span>Highest level of security (SOC2
@@ -55,111 +76,38 @@ description: Carefully curated AI scribe tools to help provisional psychologists
           </ul>
         </div>
         <a
-          href="https://www.heidihealth.com/au/solutions/medical-trainees?utm_source=psychology-squared&utm_medium=post&utm_campaign=psychology-squared"
-          data-affiliate="heidihealth"
+          href="${company.link}"
+          data-affiliate="${company.name.toLowerCase()}"
           class="btn js-affiliate"
           >Try it Free</a
         >
-      </article>
-    </div>
+      </article>`;
+    container.appendChild(div);
+    });
+  };
 
-    <div class="flex gap-2 items-center">
-      <img
-      src="../assets/images/affiliate/novoNote-affiliate.png"
-      alt="NovoPsych Logo"
-      class="max-w-50"
-    />
-      <article class="card card-alt card-bordered max-w-50">
-        <div class="mb-8">
-          <h3 class="card-title">NovoPsych</h3>
-          <div class="row-between row-divider">
-            <p class="subtitle-muted">
-              18 months at no cost for provisional psychologists
-            </p>
-            <!-- <p class="price">$30/month</p> -->
-          </div>
-          <ul class="card-list">
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Specifically designed for mental
-              health practitioners by the team at NovoPsych
-            </li>
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Multi session reports
-            </li>
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Integration of psychometric
-              results of NovoPsych
-            </li>
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Template library designed by a
-              team of psychologists
-            </li>
-          </ul>
-        </div>
-        <a
-          href="https://novopsych.com/provisional-psychologist-hub/"
-          class="btn js-affiliate"
-          data-affiliate="novopsych"
-          >Try it Free</a
-        >
-      </article>
-    </div>
+  document.addEventListener("DOMContentLoaded", renderCompanies);
+</script>
 
-    <div class="flex gap-2 items-center">
-      <img
-      src="../assets/images/affiliate/practaLuma-affiliate.webp"
-      alt="Practaluma Logo"
-      class="max-w-50"
-    />
-      <article class="card card-alt card-bordered max-w-50">
-        <div class="mb-8">
-          <h3 class="card-title">Practaluma</h3>
-          <div class="row-between row-divider">
-            <p class="subtitle-muted">
-              Create an account and email <u>support@practaluma.com</u> your
-              provisional status for free access
-            </p>
-          </div>
-          <ul class="card-list">
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Converts sessions into clinical
-              notes and reports
-            </li>
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Streamlines delivery and scoring
-              of psychometric tools
-            </li>
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Australian Privacy and
-              HIPAA-compliant platform
-            </li>
-          </ul>
-        </div>
-        <a
-          href="https://www.practaluma.com/"
-          class="btn js-affiliate"
-          data-affiliate="practaluma"
-          >Try it Free</a
-        >
-      </article>
+<div class="container container-short">
+  <header class="title-container mb-05 mt-12">
+    <div class="title-content title-content-centered">
+      <h1 class="main-title main-title"><u>Free</u> AI Scribes</h1>
+      <p class="main-subtitle">for Provisional Psychologists</p>
     </div>
+    <img src="../assets/images/affiliate/affiliate-header.png" alt="Affiliate Header" class="max-w-50">
+  </header>
+
+  <section class="card mb-24">
+    <h2 class="content-info-header-alt mb-1">🤝 Huge News!</h2>
+    <p class="section-text-alt">
+      I'm excited to announce that I'm now offering <u>free</u> AI scribe tools
+      to provisional psychologists<br />
+      Share with any provisional psychologists who should know about this!<br />
+      See the company information on their websites for terms and conditions
+    </p>
   </section>
 
-  <!-- <section class="mt-8">
-  <h2 class="section-title">What Others Are Saying</h2>
-  <div class="cards-grid">
-    <div class="card">
-      <p class="card-text italic">“This has completely transformed my workflow. I’m more productive than ever!”</p>
-      <p class="text-muted mt-1">— Sarah M., Provisional Psychologist</p>
-    </div>
-    <div class="card">
-      <p class="card-text italic">“I was skeptical at first, but this tool has saved me so much time on documentation.”</p>
-      <p class="text-muted mt-1">— James K., Provisional Psychologist</p>
-    </div>
-    <div class="card">
-      <p class="card-text italic">“Finally, someone has curated the best tools for us. I can focus more on my clients and less on paperwork.”</p>
-      <p class="text-muted mt-1">— Mark A., Provisional Psychologist</p>
-    </div>
-  </div>
-</section> -->
+  <section id="prov-psych-container" class="container-alt">
+  </section>
 </div>
