--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -58,21 +58,7 @@ description: Carefully curated AI scribe tools to help provisional psychologists
         <div class="mb-8">
           <h3 class="card-title">${company.name}</h3>
           <ul class="card-list">
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Highest level of security (SOC2
-              and ISO27001)
-            </li>
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>AI is trained on medical language
-              and built by clinicians, making transcription unmatched
-            </li>
-            <li class="flex gap-05 mb-075">
-              <span class="text-gold">✓</span>Fully regulated in multiple
-              countries
-            </li>
-            <li class="flex gap-05">
-              <span class="text-gold">✓</span>Custom templates
-            </li>
+            ${company.description.map((description) => `<li class="flex gap-05 mb-075"><span class="text-gold">✓</span>${description}</li>`).join("")}
           </ul>
         </div>
         <a
@@ -108,6 +94,6 @@ description: Carefully curated AI scribe tools to help provisional psychologists
     </p>
   </section>
 
-  <section id="prov-psych-container" class="container-alt">
+  <section id="prov-psych-container" class="container-alt" style="margin-bottom: 5rem">
   </section>
 </div>
