--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -87,8 +87,8 @@ description: Carefully curated AI scribe tools to help provisional psychologists
   <section class="card mb-24">
     <h2 class="content-info-header-alt mb-1">🤝 Huge News!</h2>
     <p class="section-text-alt">
-      I'm excited to announce that I'm now offering <u>free</u> AI scribe tools
-      to provisional psychologists<br />
+      I'm excited to announce that we can present to you <u>free</u> AI scribe tools
+      for provisional psychologists<br />
       Share with any provisional psychologists who should know about this!<br />
       See the company information on their websites for terms and conditions
     </p>
