--- a/comparisons/table.html
+++ b/comparisons/table.html
@@ -122,7 +122,10 @@
             class="flex items-start sm:items-center justify-between gap-3 mb-3"
           >
             <div>
-              <h2 id="select-plans-heading" class="text-xl font-semibold">
+              <h2
+                id="select-plans-heading"
+                class="text-xl text-[var(--text-secondary)] font-semibold"
+              >
                 Select plans to see a side-by-side comparison
               </h2>
 
@@ -136,7 +139,7 @@
             <div class="flex items-center gap-3">
               <p
                 id="match-pill"
-                class="hidden sm:inline-flex items-center gap-2 text-sm text-white"
+                class="hidden sm:inline-flex items-center gap-2 text-sm text-[var(--text-secondary)]"
                 aria-live="polite"
               >
                 <span id="match-count" class="font-semibold">0</span> matches
@@ -148,13 +151,13 @@
                 aria-haspopup="dialog"
                 aria-controls="filter-dialog"
                 aria-expanded="false"
-                class="inline-flex items-center gap-2 rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-50 hover:border-gray-400 transition"
+                class="inline-flex items-center gap-2 rounded-lg border border-[var(--primary-gold)] bg-[var(--gold-light)] px-3 py-2 text-sm font-semibold text-[var(--navy-deepest)] hover:bg-[var(--primary-gold)] hover:text-white transition"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 20 20"
                   fill="currentColor"
-                  class="h-5 w-5 text-indigo-600"
+                  class="h-5 w-5"
                   aria-hidden="true"
                 >
                   <path
@@ -1109,16 +1112,17 @@
             let label = item.name;
 
             if (isCompared) {
-              cls += "bg-indigo-600 text-white border-indigo-600";
+              cls +=
+                "bg-[var(--primary-gold)] text-white border-[var(--primary-gold)]";
               btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>${label}`;
             } else if (atLimit) {
               cls +=
-                "bg-gray-100 text-gray-400 border-gray-200 cursor-not-allowed";
+                "bg-[var(--gold-light)] text-[var(--navy-deepest)] border-[var(--primary-gold)] cursor-not-allowed opacity-70";
               btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/></svg>${label}`;
               btn.disabled = true;
             } else {
               cls +=
-                "bg-white text-gray-700 border-gray-300 hover:bg-gray-100 hover:border-gray-400";
+                "bg-[var(--gold-light)] text-[var(--navy-deepest)] border-[var(--primary-gold)] hover:bg-[var(--primary-gold)] hover:text-white";
               btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/></svg>${label}`;
             }
 
